Project

General

Profile

Actions

Bug #40375

closed

rgw_file: rgw_readdir eof condition must take callback early termination in to account

Added by Matt Benjamin almost 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus, mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The eof() methods of RGWListBucketsRequest and RGWReaddirRequest were returning EOF correctly with respect to the underlying object listing operations, but need to report !EOF also when a non-success return from the callers callback function causes early termination from the listing.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #40598: luminous: rgw_file: rgw_readdir eof condition must take callback early termination in to accountRejectedActions
Copied to rgw - Backport #40599: mimic: rgw_file: rgw_readdir eof condition must take callback early termination in to accountResolvedNathan CutlerActions
Copied to rgw - Backport #40600: nautilus: rgw_file: rgw_readdir eof condition must take callback early termination in to accountResolvedPrashant DActions
Actions #1

Updated by Matt Benjamin almost 5 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 28565
Actions #2

Updated by Matt Benjamin almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40598: luminous: rgw_file: rgw_readdir eof condition must take callback early termination in to account added
Actions #4

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40599: mimic: rgw_file: rgw_readdir eof condition must take callback early termination in to account added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40600: nautilus: rgw_file: rgw_readdir eof condition must take callback early termination in to account added
Actions #6

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF