rgw_file: fix readdir eof() calc--caller stop implies !eof

If rgw_readdir2()'s caller stops enumeration by returning an error
from the readdir callback function, the value of eof is false
for the rgw_readdir2() call.  I.e., eof() is true when the
underlying listing is !truncated and no results were refused by
the caller.

Fixes: http://tracker.ceph.com/issues/40375

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit 7fa9cf35deca5efbf82cf438574d7afe15748bc0)